# ChangeLog for net-mail/popa3d
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/popa3d/ChangeLog,v 1.24 2006/05/23 18:20:55 kloeri Exp $

  23 May 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove port001 from metadata, bug 26349.

  01 Dec 2005; Jason Wever <weeve@gentoo.org> popa3d-1.0.ebuild:
  Stable on SPARC.

  16 Nov 2005; Ian Leitch <port001@gentoo.org> popa3d-1.0.ebuild:
  Stable on x86.

  23 Aug 2005; Andrej Kacian <ticho@gentoo.org> popa3d-0.6.4.1-r2.ebuild,
  popa3d-1.0.ebuild:
  Use -1 for shell argument to enewuser. Bug #103421.

*popa3d-1.0 (12 Aug 2005)

  12 Aug 2005; Ian Leitch <port001@gentoo.org> +popa3d-1.0.ebuild:
  Version bump. This version uses some silly default values which are way too
  high for most systems, these have been replaced by some more sensible
  values.

  23 May 2005; Ian Leitch <port001@gentoo.org> -popa3d-0.6.4.1-r1.ebuild,
  popa3d-0.6.4.1-r2.ebuild:
  Patches pushed to the mirrors, SRC_URI updated - #93647. keepdir on
  /var/empty - #93659. Removed stale revision.

  21 May 2005; Ian Leitch <port001@gentoo.org> popa3d-0.6.4.1-r2.ebuild:
  Stable on x86

*popa3d-0.6.4.1-r2 (26 Apr 2005)

  26 Apr 2005; Ian Leitch <port001@gentoo.org> +popa3d-0.6.4.1-r2.ebuild:
  Ebuild cleanups, thanks to Diego Pettenò <flameeyes@gentoo.org> - #84736

*popa3d-0.6.4.1-r1 (24 Feb 2005)

  24 Feb 2005; <port001@gentoo.org> -files/pam, -popa3d-0.6.3.ebuild,
  +popa3d-0.6.4.1-r1.ebuild, -popa3d-0.6.4.1.ebuild, -popa3d-0.6.4.ebuild:
  Fixed up to comply with bug #79240. Stable on x86. Cleaned out old versions.

  06 Nov 2004; Jason Wever <weeve@gentoo.org> popa3d-0.6.4.1.ebuild:
  Added ~sparc keyword to 0.6.4.1 as it wasn't carried over in the version bump.

  06 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org> popa3d-0.6.3.ebuild,
  popa3d-0.6.4.1.ebuild, popa3d-0.6.4.ebuild:
  Switch to use epause and ebeep, bug #62950
