@@ -1,40 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX popa3d-initrc 479 RMD160 7a10b05009d7930d5edf7d37bb633a7eb490baf0 SHA1 f9904d3ce4b893a7da64718f0bb9f879a747a7a0 SHA256 2fc9aeeb1818d7a5fca2f72212767118c6b23d432d1d2550b82cc99b5ada3711
-MD5 d7e80b35c6a318d497f9fc4e538e0429 files/popa3d-initrc 479
-RMD160 7a10b05009d7930d5edf7d37bb633a7eb490baf0 files/popa3d-initrc 479
-SHA256 2fc9aeeb1818d7a5fca2f72212767118c6b23d432d1d2550b82cc99b5ada3711 files/popa3d-initrc 479
-DIST popa3d-0.5.9-maildir-2.diff.gz 3227
-DIST popa3d-0.6.3-vname-2.diff.gz 947
-DIST popa3d-0.6.4.1.tar.gz 32061
-DIST popa3d-1.0.tar.gz 32586
-EBUILD popa3d-0.6.4.1-r2.ebuild 4471 RMD160 6dfddcf11559180e46eb5fcfb961b56e8a72e51b SHA1 5994ba717948c284a4d0332a873ac36d70dd2e49 SHA256 11c6b71b21a8d213b401a59cc70fea235775596d07cfa0510772171eb7a3bd79
-MD5 76b82c38818ea590156682b0504acfcc popa3d-0.6.4.1-r2.ebuild 4471
-RMD160 6dfddcf11559180e46eb5fcfb961b56e8a72e51b popa3d-0.6.4.1-r2.ebuild 4471
-SHA256 11c6b71b21a8d213b401a59cc70fea235775596d07cfa0510772171eb7a3bd79 popa3d-0.6.4.1-r2.ebuild 4471
-EBUILD popa3d-1.0.ebuild 5447 RMD160 d93711b99dbde31862224c3961a3c0c229f2e0b0 SHA1 24e52b70f2b1f8f4802f4cc737f59dfe3607d04e SHA256 89a910769c585ea018e69fbc74c83a7d369f68f1715a73408674355372c7a967
-MD5 0c6a249e00612aa98eb0d8725ff68cb5 popa3d-1.0.ebuild 5447
-RMD160 d93711b99dbde31862224c3961a3c0c229f2e0b0 popa3d-1.0.ebuild 5447
-SHA256 89a910769c585ea018e69fbc74c83a7d369f68f1715a73408674355372c7a967 popa3d-1.0.ebuild 5447
-MISC ChangeLog 3762 RMD160 67f88c2a51fca115e9fc892394f8c9c4b9c8cd41 SHA1 1ba5ffac876aad10db41c5b34dec05680990d7c8 SHA256 385c98e927eace3e895eb17fba4e0516b171b209ffa23b8c0e6c5dca2b975357
-MD5 cee9c07a540409089c9701e7947f1a85 ChangeLog 3762
-RMD160 67f88c2a51fca115e9fc892394f8c9c4b9c8cd41 ChangeLog 3762
-SHA256 385c98e927eace3e895eb17fba4e0516b171b209ffa23b8c0e6c5dca2b975357 ChangeLog 3762
-MISC metadata.xml 235 RMD160 9902228719750c3aa42965b67d3e5fe7354f217f SHA1 cb097e246c97c9d57cbfb5fc1850a6e294509b14 SHA256 67771a4ca51a3c324056aa0ab9ee0040646c12c548b86a478be4b8280af63235
-MD5 5b48d9a897a74987026c74a16e2478e5 metadata.xml 235
-RMD160 9902228719750c3aa42965b67d3e5fe7354f217f metadata.xml 235
-SHA256 67771a4ca51a3c324056aa0ab9ee0040646c12c548b86a478be4b8280af63235 metadata.xml 235
+MD5 019fc8d0a5313a4a5381de560e5fbd7e ChangeLog 3925
 MD5 d5e922ceb0a1fbe958b60cefb5029e1b files/digest-popa3d-0.6.4.1-r2 208
-RMD160 c4de6461cd328b9b8a0c0b495cd0c43cb002dc30 files/digest-popa3d-0.6.4.1-r2 208
-SHA256 84de3691ae45655d8ace621e977960c9a3071e1a91ad1dd7748430463b743da2 files/digest-popa3d-0.6.4.1-r2 208
 MD5 361c1454d68521669150fc25f5078c82 files/digest-popa3d-1.0 204
-RMD160 3f71cf91a03c93d8c08d6c981a3ce1e97a9414c6 files/digest-popa3d-1.0 204
-SHA256 eecfbe01d3cdef08a1ca77a396661b91cb5c8fd03623107b9c53b001db09a708 files/digest-popa3d-1.0 204
+MD5 0ea4016f3565e2276780fb2ced858043 files/digest-popa3d-1.0.2 206
+MD5 d7e80b35c6a318d497f9fc4e538e0429 files/popa3d-initrc 479
+MD5 5b48d9a897a74987026c74a16e2478e5 metadata.xml 235
+MD5 76b82c38818ea590156682b0504acfcc popa3d-0.6.4.1-r2.ebuild 4471
+MD5 62a30b527ddaa69494697d2cec729590 popa3d-1.0.2.ebuild 5558
+MD5 0c6a249e00612aa98eb0d8725ff68cb5 popa3d-1.0.ebuild 5447
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3 (GNU/Linux)
+Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD8DBQFEc1KNugEuf3OQ0akRAr52AKCbuMJwAqb4vI+rPhzml2GeSO9J5gCgjdfx
-pVkUHFsMT1VP1ThkYX6KWAs=
-=nmz+
+iD8DBQFEc1oEViELBEf1JB0RAmyRAJ0dtuzlb9G0NdpIj18dTyb2nCvqbwCfTtOM
+rRzhwqGUtYEWe+0rpECRfMg=
+=iYod
 -----END PGP SIGNATURE-----
