@@ -1,0 +1,3 @@
+MD5 ec478faa35cc2ee4f06f77eb9c236070 popa3d-0.5.9-maildir-2.diff.gz 3227
+MD5 568acb623180cbdbfcd286a037688bcf popa3d-0.6.3-vname-2.diff.gz 947
+MD5 cebdc56b6fa0655a5688c89cb7703b66 popa3d-1.0.2.tar.gz 32848
